codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_refresh_preserves_highlight.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.5 default · location /tmp/project

  Choose a mind and effort
  Provider: OpenAI (openai)
  Route: the provider's default endpoint
  Protocol: OpenAI Responses
  Credential: your OpenAI sign-in


  1. Change provider…               Currently OpenAI
› 2. Renamed model                  Older balanced model for straightforward
                                    work.
  3. Shared display name (current)  Legacy coding model.

  enter select · esc back
