codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_refreshes_auto_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3394
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.5 default · location /tmp/project

  Choose a mind
  Pick a quick auto mode or browse all models.
  Provider: OpenAI (openai)
  Route: the provider's default endpoint
  Protocol: OpenAI Responses
  Credential: your OpenAI sign-in


  1. GPT-5.5               Auto model
› 2. All models (current)  Choose a specific model and reasoning level (current:
                           GPT-5.5)
  3. Change provider…      Currently OpenAI

  enter select · esc back
