codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__multi_agent_enable_prompt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3213
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Enable subagents?
  Subagents are disabled in this TUI session.


› 1. Yes, enable  Save on the server for new threads without changing this
                  thread
  2. Not now      Keep subagents disabled

  enter select · esc back
