codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pending_token_activity_refresh_renders_above_composer_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---
/usage daily

 Token activity
   Loading...

 Elpis · model gpt-5.6-sol · location /tmp/proje
│                                               │CONTEXT LEDGER  context not
› Ask Elpis to do anything                      │measured · ≈0 source estimates
│                                               │Tab controls · Alt+C hide ·
│                                               │Ctrl+click open file
│                                               │
          context unknown · Tab Context Ledger  │SMART PRUNE          [···] SYNC
                                                │Reading current thread state
                                                │Syncing… · /smart-prune on|off
                                                │sets an explicit state
                                                │
                                                │CONTEXT WINDOW  usage
                                                │unavailable
                                                │Context measurement unavailable
                                                │until the first request
                                                │snapshot
                                                │
                                                │No portable context is
                                                │available.
