codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permission_discovery_empty.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 155
expression: "render_bottom_popup(&chat, 100)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Update Model Permissions
  No permission profiles returned by the server.


›    current-profile (current) (disabled)  Current permission profile (disabled: Not available on
                                           this server)

  enter select · esc back
