codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permission_discovery_failure.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 143
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Update Model Permissions
  Failed to load permissions: disconnected


› 1. Retry

  enter select · esc back
