codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permission_discovery_loading.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 66
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Update Model Permissions


›    Loading permission profiles…

  enter select · esc back
